# curlyhge

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/core/: CMakeLists.txt  graphics.cpp  system.cpp
src/curlydemo/: CMakeLists.txt  demogamesubsystem.cpp  demogamesubsystem.h
src/curlyengine/: CMakeLists.txt  curlycore.cpp  curlycore.h  curlyengine.cpp  curlyengine.h  debugutilities.cpp  debugutilities.h  enginesubsystem.cpp  enginesubsystem.h  gamesession.cpp  gamesession.h  irenderable.h  launch.cpp  sharedrenderables.cpp  sharedrenderables.h  vector2d.cpp  vector2d.h
src/esm/: CMakeLists.txt  esmgameinstance.cpp  esmgameinstance.h  esmgamesubsystem.cpp  esmgamesubsystem.h  esmrenderables.cpp  esmrenderables.h
src/imgui/: CMakeLists.txt
